fix: change main-section5 on mobile

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -189,14 +189,16 @@
         display: grid;
         justify-content: center;
         grid-column-gap: 20px;
-        grid-template: auto / 1fr 1fr 1fr;
+        grid-template: auto / 1fr 1fr;
         grid-template-areas:
-        "title title title"
-        "card1 card2 card3"
-        "card4 card4 card4"
-        "card6 card6 card6"
-        "card5 card7 card7"
-        "card8 card8 card9";
+        "title title"
+        "card1 card1"
+        "card2 card3"
+        "card4 card4"
+        "card6 card6"
+        "card5 card7"
+        "card8 card8"
+        "card9 card9";
         padding-top: 60px;
 
         &__title {
